src/rpc/echosvc/deployments/echosvc-service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: echosvc
spec:
  selector:
    app: echosvc
  ports:
  - nodePort: 30100
    port: 8888
    targetPort: 8888
  type: NodePort
